--- a/style.css
+++ b/style.css
@@ -5,17 +5,19 @@ body {
   padding: 20px;
 }
 
-h1 {
-  font-size: 2em;
-  margin-bottom: 20px;
+h1, h2 {
+  margin-top: 30px;
 }
 
-.controls {
-  margin-bottom: 20px;
+.form, .controls {
+  margin: 20px auto;
+  max-width: 400px;
 }
 
-input[type="text"], input[type="file"], button {
-  margin: 5px;
+input[type="text"], input[type="password"], input[type="email"], input[type="file"], button {
+  display: block;
+  width: 100%;
+  margin: 10px 0;
   padding: 10px;
   font-size: 16px;
 }
